--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' &&
+      contains(github.event.head_commit.message, 'deploy')
     steps:
       - uses: actions/checkout@master
       - uses: jakejarvis/s3-sync-action@master
